<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="twitter">Logged In?</string>
    <string name="app_name">Twiit</string>
    <string name="oauth_name">OAUTH</string>
    <string name="tweet">Enter your Tweet here</string>
    <string name="label"><b>Status Message</b></string>
    <string name="post"><b>Post</b></string>
    <string name="search"><b>Search</b></string>
	<string name="refresh"><b>Refresh</b></string>
    <string name="token">token</string>
    <string name="secret">secret</string>
    <string name="userhint">Not logged in</string>
    <string name="usercheckhint">Tap left box to Login</string>
    <string name="userhintstatus"></string>
    <string name="type">Type something and see if it shows up here</string>
    <string name="auth_progress_title">Authenticating ...</string>
    <string name="auth_progress_text">Fetching your profile information.</string>
    <string name="tweet_progress_title">Sending...</string>
    <string name="tweet_progress_text">Posting your Message</string>
    <string name="tweet_empty">You have to enter something</string>
    <string name="tweet_error">There was some kind of problem!</string>
    <string name="bad_value">Bad Value</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected - Please press Return</string>
    <string name="connection_problem">Problem connecting - Please press Return</string>
    
</resources>
